footer gap fixed

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -204,7 +204,7 @@ main section{
 footer{
     padding: 130px 230px;
      display: flex;
-     gap 100px;
+     gap: 100px;
 }
 
 .footer-column{
